@@ -6,7 +6,9 @@
 TabWidget::TabWidget(QWidget *AParent) : QTabWidget(AParent)
 {
 	FPressedTabIndex = -1;
+	tabBar()->setContextMenuPolicy(Qt::CustomContextMenu);
 	connect(tabBar(), SIGNAL(tabMoved(int,int)), SIGNAL(tabMoved(int,int)));
+	connect(tabBar(), SIGNAL(customContextMenuRequested(const QPoint &)), SLOT(onTabBarContextMenuRequested(const QPoint &)));
 }
 
 TabWidget::~TabWidget()
@@ -16,16 +18,25 @@ TabWidget::~TabWidget()
 
 void TabWidget::mousePressEvent(QMouseEvent *AEvent)
 {
-	if (AEvent->buttons() == Qt::MidButton)
-		FPressedTabIndex = tabBar()->tabAt(AEvent->pos());
+	FPressedTabIndex = tabBar()->tabAt(AEvent->pos());
 	QTabWidget::mousePressEvent(AEvent);
 }
 
 void TabWidget::mouseReleaseEvent(QMouseEvent *AEvent)
 {
-	if (AEvent->buttons() == Qt::NoButton)
-		if (FPressedTabIndex>=0 && FPressedTabIndex == tabBar()->tabAt(AEvent->pos()))
-			emit tabCloseRequested(FPressedTabIndex);
+	int index = tabBar()->tabAt(AEvent->pos());
+	if (index>=0 && index==FPressedTabIndex)
+	{
+		if (AEvent->buttons() == Qt::MidButton)
+		{
+			emit tabCloseRequested(index);
+		}
+	}
 	FPressedTabIndex = -1;
 	QTabWidget::mouseReleaseEvent(AEvent);
+}
+
+void TabWidget::onTabBarContextMenuRequested(const QPoint &APos)
+{
+	emit tabMenuRequested(tabBar()->tabAt(APos));
 }
